--- a/components/index_page/comming_soon_component/styles.module.scss
+++ b/components/index_page/comming_soon_component/styles.module.scss
@@ -1,12 +1,22 @@
 .images_container {
   display: flex;
   flex-direction: row;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   height: 150px;
 }
 
 .img_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0px 20px 0px 0px;
   min-width: 255px;
   border-radius: 5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.container{
+  cursor: pointer;
 }
