--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -17,7 +17,10 @@
 
 .bottom_container {
   background-color: var(--black);
-  height: 100%
+  height: 100%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 200px;
 }
 
 .comming_soon_container {
@@ -25,7 +28,8 @@
   top: 595px;
   z-index: 1;
   padding-left: 10%;
-  max-width: 95%;
+  padding-right: 10%;
+  max-width: 98%;
   overflow: hidden;
 }
 
