--- a/pages/styles/globals.scss
+++ b/pages/styles/globals.scss
@@ -6,9 +6,10 @@
   --error: rgb(182, 60, 47);
   --black: rgb(20, 20, 20);
   --white: rgb(243, 243, 243);
+  --blue:#003bff
 }
 // Sass variables
-$font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+$font: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
   Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 // Styles
 html,
@@ -176,6 +177,25 @@ body {
 .liteflix_btn:focus {
   outline: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+/* Track */
+  ::-webkit-scrollbar-track {
+  background: black; 
+}
+/* Handle */
+  ::-webkit-scrollbar-thumb {
+  background: var(--black); 
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+} 
+
 
 @include media(md) {
   /* Modales fullscreen comunes */
