--- a/components/index_page/comming_soon_component/styles.module.scss
+++ b/components/index_page/comming_soon_component/styles.module.scss
@@ -4,6 +4,8 @@
   overflow-x: auto;
   overflow-y: hidden;
   height: 150px;
+  justify-content: flex-start;
+  margin-left: 18px;
 }
 
 .img_container {
