--- a/components/commons/form/inputs/file/file_input/styles.module.scss
+++ b/components/commons/form/inputs/file/file_input/styles.module.scss
@@ -1,17 +1,17 @@
 // Change this on main color change
-$main_color: #7a00f9;
+$main_color: #c5c7c9;
 .drop_zone {
-  height: 200px;
   background-color: transparent;
-  border: 3px dashed $main_color;
+  border: 2px dashed $main_color;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: all 0.3s;
+  padding: 40px;
   &:hover {
-    background-color: lighten($color: $main_color, $amount: 45);
+    background-color: lighten($color: $main_color, $amount: 15);
   }
   .input_title {
     margin: 20px 10px 5px 10px;
@@ -24,5 +24,20 @@ $main_color: #7a00f9;
   .file_input {
     // Do not change this property
     display: none;
+  }
+  .text_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-family: "Montserrat";
+    color: #9b9b9b;
+    .clip_image{
+      width: 20px;
+    }
+    .bold_text{
+      font-weight: 700;
+      color: #0076ff;
+    }
   }
 }
