--- a/components/commons/header/profile_menu/styles.module.scss
+++ b/components/commons/header/profile_menu/styles.module.scss
@@ -8,20 +8,21 @@
   background-color: white;
   border-radius: 5px;
   width: 130px;
-  height: 218px;
+  height: 247px;
   position: absolute;
-  top: 45px;
-  right: 10px;
+  top: 65px;
+  right: 10.8%;
 }
 
 .top_adornment {
-  position: absolute;
+  width: 17px;
+  height: 17px;
+  transform: rotate(-315deg);
+  border-radius: 5px;
   background-color: white;
-  border-radius: 100%;
-  width: 14px;
-  height: 8px;
-  right: 22px;
-  top: -4px;
+  position: absolute;
+  right: 18px;
+  top: -5px;
 }
 
 .users_list,
