--- a/components/index_page/popular_movies_component/styles.module.scss
+++ b/components/index_page/popular_movies_component/styles.module.scss
@@ -1,21 +1,22 @@
-.container{
+.container {
   overflow-x: auto;
   overflow-y: hidden;
 }
 .images_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-left: 18px;
-    overflow: auto;
-  }
-  
-  .img_container {
-    margin: 0px 20px 0px 0px;
-    min-width: 255px;
-    border-radius: 5px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 485px;
-  }
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 18px;
+  overflow: auto;
+}
+
+.img_container {
+  margin: 0px 20px 0px 0px;
+  min-width: 255px;
+  border-radius: 5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 485px;
+  display: flex;
+  align-items: flex-end;
+}
