--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -3,10 +3,10 @@
 .container {
   justify-content: flex-start;
   display: flex;
+  height: 100%;
 }
-
 .top_container {
-  background-image: url("/images/top_image4.jpg");
+  background-image: url("/images/top_image5.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -15,22 +15,19 @@
   padding-right: 10%;
   padding-left: 10%;
 }
-
-.bottom_container {
-  background-color: var(--black);
-  height: 100%;
+.comming_soon_container {
+  margin: -110px auto;
+  padding-right: 1%;
+  z-index: 1;
   padding-left: 10%;
   padding-right: 10%;
-  padding-top: 200px;
+}
+.bottom_container {
+  background-color: var(--black);
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
-.comming_soon_container {
-  position: absolute;
-  top: 595px;
-  z-index: 1;
-  overflow: hidden;
-  padding: unset;
-  margin-left: 9%;
-  width: 80.5%;
-  padding-left: 10px;
+.popular_movies_container{
+  padding-top: 200px;
 }
