--- a/components/index_page/comming_soon_component/styles.module.scss
+++ b/components/index_page/comming_soon_component/styles.module.scss
@@ -1,15 +1,24 @@
-.container{
+.container {
   cursor: pointer;
+}
+.mobile_container {
+  justify-content: flex-end;
 }
 
 .images_container {
   display: flex;
-  flex-direction: row;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 150px; 
+  height: 150px;
   justify-content: flex-start;
   margin-left: 18px;
+}
+.mobile_images_container {
+  flex-direction: column;
+  height: unset;
+  .img_container {
+    margin-bottom: 15px;
+  }
 }
 
 .img_container {
@@ -19,10 +28,16 @@
   margin: 0px 20px 0px 0px;
   min-width: 255px;
   border-radius: 5px;
-  background-size: cover;
-  background-repeat: no-repeat; 
-  &__movie_image{
-    width: 255px;
-    height: 150px;
+  position: relative;
+  width: 100%;
+  &__movie_image {
+    width: 100%;
+    height: auto;
   }
+}
+
+.hover_component_container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
