--- a/components/index_page/info_component/styles.module.scss
+++ b/components/index_page/info_component/styles.module.scss
@@ -6,6 +6,10 @@
   width: 100%;
   color: var(--white);
 }
+.mobile_container{
+  justify-content: center;
+}
+
 .info_container{
   max-width: 400px;
   .first_title {
@@ -19,6 +23,9 @@
     font-family: "Roboto Slab";
     line-height: 0.9;
   }
+}
+.mobile_info_container{
+  text-align: center;
 }
 
 .little_title {
@@ -36,6 +43,9 @@
     position: absolute;
     right: 0px;
   }
+}
+.buttons_mobile_container{
+  justify-content: center;
 }
 
 @include media(md){
