--- a/components/index_page/popular_movies_component/popular_movies_hover_component/styles.module.scss
+++ b/components/index_page/popular_movies_component/popular_movies_hover_component/styles.module.scss
@@ -1,13 +1,12 @@
 .container {
   background: rgba(0, 0, 0, 0.8);
-  min-width: 255px;
-  max-width: 255px;
   border-radius: 5px;
   height: 40%;
   display: flex;
   flex-direction: column;
   padding-top: 10px;
   position: relative;
+  width: 100%;
 }
 
 .button_container {
@@ -33,7 +32,7 @@
   width: 50px;
 }
 
-.bottom_container {
+.info_container {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -64,10 +63,12 @@
   &__image{
     padding-right: 5px;
   }
-  &__arrow_image{
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+
+}
+
+.arrow_image_container{
+ display:flex;
+ align-items: center;
+ justify-content: center;
+ margin-bottom: 5px;
 }
