--- a/components/commons/header/desktop_header/right_header_section/styles.module.scss
+++ b/components/commons/header/desktop_header/right_header_section/styles.module.scss
@@ -20,7 +20,7 @@
 }
 
 .new_notification_alert {
-  background-color: red;
+  background-color: var(--red);
   width: 5px;
   border-radius: 100%;
   height: 5px;
