--- a/pages/styles/globals.scss
+++ b/pages/styles/globals.scss
@@ -6,11 +6,12 @@
   --error: rgb(182, 60, 47);
   --black: rgb(20, 20, 20);
   --white: rgb(243, 243, 243);
-  --blue:#003bff
+  --blue: #003bff;
+  --red: #ad1919;
 }
 // Sass variables
-$font: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-  Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+$font: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 // Styles
 html,
 body {
@@ -50,7 +51,7 @@ body {
   }
 }
 
-.MuiDialog-paperWidthLg{
+.MuiDialog-paperWidthLg {
   width: 730px;
   border-radius: 10px;
 }
@@ -189,24 +190,44 @@ body {
   height: 2px;
 }
 /* Track */
-  ::-webkit-scrollbar-track {
-  background: black; 
+::-webkit-scrollbar-track {
+  background: black;
 }
 /* Handle */
-  ::-webkit-scrollbar-thumb {
-  background: var(--black); 
+::-webkit-scrollbar-thumb {
+  background: var(--black);
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
-} 
+  background: #555;
+}
 
-button{
+button {
   border: none;
 }
-button:focus{
+button:focus {
   outline: none;
 }
+  /* Custom class sidebar */
+  .responsive_sidebar {
+    .MuiDialog-paperFullScreen {
+      max-width: 70%;
+    }
+    .MuiDialog-scrollPaper {
+      justify-content: flex-start;
+    }
+    .MuiPaper-root {
+      background-color: var(--black);
+    }
+  }
+
+  .close_sidebar {
+    position: absolute;
+    top: 1px;
+    left: 10px;
+    cursor: pointer;
+    padding: 10px;
+  }
 
 @include media(md) {
   /* Modales fullscreen comunes */
@@ -215,11 +236,11 @@ button:focus{
   }
   /* Modales responsive comunes */
   .responsive_modal {
-    top: auto !important;
-  }
-  .responsive_modal {
     .MuiDialog-paperFullScreen {
-      max-height: 86vh !important;
+      max-height: 90vh !important;
+      height: 100%;
+      bottom: 0px;
+      position: absolute;
     }
     .MuiBackdrop-root {
       background-color: rgba(0, 0, 0, 0.3) !important;
