--- a/components/commons/buttons/add_movie_button_component/styles.module.scss
+++ b/components/commons/buttons/add_movie_button_component/styles.module.scss
@@ -13,7 +13,7 @@
 }
 
 .new_list {
-  background: red;
+  background: var(--red);
   border-radius: 20px;
   width: 40px;
   height: 40px;
@@ -24,7 +24,7 @@
   position: relative;
 }
 
-.new_list:hover {
+.new_list:hover, .hovered {
   width: 170px;
   border-radius: 20px;
   justify-content: space-between;
@@ -55,7 +55,7 @@
     height: 37px;
     width: 37px;
   }
-  .new_list:hover {
+  .new_list:hover, .hovered {
     width: 165px;
   }
 }
@@ -71,7 +71,7 @@
     height: 35px;
     width: 35px;
   }
-  .new_list:hover {
+  .new_list:hover, .hovered {
     width: 160px;
   }
 }
