--- a/components/commons/header/desktop_header/left_header_section/styles.module.scss
+++ b/components/commons/header/desktop_header/left_header_section/styles.module.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  display: flex;
+  display: flex; 
   align-items: center;
   width: fit-content;
   font-size: 14px;
@@ -20,6 +20,9 @@
       text-decoration: none;
     }
   }
+  .logo {
+    width: 100px;
+  }
 }
 
 .explore_options_container {
@@ -32,12 +35,19 @@
 @include media(xlg) {
   .ul_container {
     font-size: 13px;
+    .logo {
+      width: 75px;
+    }
   }
+
 }
 
 @include media(lg) {
   .ul_container {
     font-size: 11.5px;
+    .logo {
+      width: 70px;
+    }
   }
 }
 
