--- a/components/index_page/comming_soon_component/comming_soon_hover_component/styles.module.scss
+++ b/components/index_page/comming_soon_component/comming_soon_hover_component/styles.module.scss
@@ -35,7 +35,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  padding-left: 13px;
+  padding: 13px 13px 2px;
   line-height: normal;
   color: white;
   margin-top: -3px;
@@ -45,6 +45,9 @@
     font-weight: 700;
     width: 100%;
     display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
   .description {
     font-size: 12px;
