--- a/components/commons/buttons/send_movie_button_component/styles.module.scss
+++ b/components/commons/buttons/send_movie_button_component/styles.module.scss
@@ -12,3 +12,12 @@
     background: var(--black);
     opacity: 0.9;
 }
+
+.success_upload_text{
+    display: block;
+    padding: 10px;
+    background: #468646;
+    color: white;
+    font-weight: 600;
+    border-radius: 10px;
+}
