front listo faltan loaders

--- a/components/index_page/comming_soon_component/styles.module.scss
+++ b/components/index_page/comming_soon_component/styles.module.scss
@@ -9,7 +9,8 @@
   display: flex;
   overflow-x: auto;
   overflow-y: hidden;
-  height: 150px;
+  height: auto;
+  min-height: 150px;
   justify-content: flex-start;
   margin-left: 18px;
 }
