--- a/pages/styles/globals.scss
+++ b/pages/styles/globals.scss
@@ -9,6 +9,9 @@
   --blue: #003bff;
   --red: #ad1919;
 }
+#__next{
+  background-color: var(--black);
+}
 // Sass variables
 $font: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -55,7 +58,12 @@ body {
   width: 730px;
   border-radius: 10px;
 }
-
+.MuiLinearProgress-colorPrimary{
+  background-color: rgb(57, 109, 57,0.5) !important
+}
+.MuiLinearProgress-barColorPrimary{
+  background-color: rgb(57, 109, 57) !important
+}
 /* General form styles */
 .inputs-container {
   margin-top: 20px;
