--- a/components/commons/background_loader/styles.module.scss
+++ b/components/commons/background_loader/styles.module.scss
@@ -1,5 +1,5 @@
 #loader_container {
-  background-color: var(--main-color-dark);
+  background-color: var(--red);
   border-radius: 20px;
   padding: 8px 20px 8px 28px;
   color: #ffffff;
