--- a/pages/styles/globals.scss
+++ b/pages/styles/globals.scss
@@ -23,6 +23,12 @@ body {
   font-family: $font;
 }
 // General Clases
+a{
+  color: white;
+}
+a:hover{
+  color: white;
+}
 .center {
   text-align: center;
 }
