--- a/pages/recently/styles.module.scss
+++ b/pages/recently/styles.module.scss
@@ -2,6 +2,7 @@
   padding-top: 100px;
   padding-right: 10%;
   padding-left: 10%;
+  height: 100vh;
 }
 .movie_container {
   cursor: pointer;
@@ -14,8 +15,10 @@
   margin: 10px 0px;
   .img {
     width: 40%;
-    height: 100%;
+    height: auto;
     border-radius: 5px;
+    max-height: 164px;
+    min-width: 150px;
   }
   .info_container {
     width: 100%;
