--- a/pages/recently/styles.module.scss
+++ b/pages/recently/styles.module.scss
@@ -2,7 +2,10 @@
   padding-top: 100px;
   padding-right: 10%;
   padding-left: 10%;
-  height: 100vh;
+  max-height: 100vh;
+  overflow: auto;
+  margin-top: 80px;
+  margin-bottom: -90px;
 }
 .movie_container {
   cursor: pointer;
@@ -13,12 +16,11 @@
   padding: 20px;
   display: flex;
   margin: 10px 0px;
+  margin-bottom: 100px;
   .img {
     width: 40%;
     height: auto;
     border-radius: 5px;
-    max-height: 164px;
-    min-width: 150px;
   }
   .info_container {
     width: 100%;
